# house_room_classifier

./: LICENCE  README.md  model_training.ipynb  pyproject.toml
house_room_classifier/data/: data_exploration.py  preprocessing.py
house_room_classifier/data/__pycache__/: data_exploration.py
house_room_classifier/models/: model_architectures.py  room_classifier_model.py  training_config.py
house_room_classifier/utils/: seed_util.py  visualization_data.py
notebooks/: exploration_preprocessing.ipynb  model_training.ipynb  predictions.ipynb
scripts/: data_exploring.py  evaluate-model-script_gen.py  evaluate_model.py  train_model.py  visualize_predictions.py
